--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint '*/**/*.ts' --quiet --fix",
     "test": "jest --coverage",
     "build:dev": "webpack-cli --config webpack.development.js",
-    "start:dev": "sam local start-api -p 3007 --docker-network hvt-lambda-network"
+    "start:dev": "sam local start-api -p 3007 --docker-network hvt-network"
   },
   "contributers": [
     {
