--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "@types/node": "^14.11.8",
     "@types/nunjucks": "^3.1.3",
     "@types/uuid": "^8.3.0",
+    "archiver": "^5.0.2",
     "aws-sam-webpack-plugin": "^0.6.0",
     "copy-webpack-plugin": "^6.2.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
+    "current-git-branch": "^1.1.0",
     "eslint": "^7.11.0",
     "eslint-import-resolver-typescript": "^2.3.0",
+    "fs-extra": "^9.0.1",
     "jest": "^26.5.2",
     "minify-bundled-webpack-plugin": "0.0.3",
     "node-sass": "^4.14.1",
