--- a/template.yml
+++ b/template.yml
@@ -9,9 +9,9 @@ Resources:
       DefinitionUri: ./simple-proxy-api.yml
       StageName: dev
       Variables:
-        ServerlessExpressLambdaFunctionName: !Ref LambdaFunction
+        ServerlessExpressLambdaFunctionName: !Ref NEARESTATF
 
-  LambdaFunction:
+  NEARESTATF:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: ./src
