--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV=development
 TIMEZONE=Europe/London
-GEOLOCATION_URL=http://host.docker.internal:3008/
+GEOLOCATION_URL=http://host.docker.internal:3008
 CDN_URL=
