--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.17.1",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.3",
     "date-fns": "^2.17.0",
     "date-fns-tz": "^1.1.2",
