--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@dvsa/cookie-manager": "1.0.11",
     "aws-sdk": "^2.1377.0",
     "aws-serverless-express": "^3.4.0",
-    "axios": "^0.21.3",
+    "axios": "^0.28.1",
     "body-parser": "^1.20.2",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.3",
-    "date-fns": "^2.17.0",
-    "date-fns-tz": "^1.1.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.18.2",
-    "govuk-frontend": "^3.11.0",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.2.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.19.2",
+    "govuk-frontend": "^3.15.0",
     "nunjucks": "^3.2.4",
     "postcode": "^5.1.0"
   },
@@ -66,5 +66,8 @@
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1",
     "webpack-merge": "^5.7.3"
+  },
+  "engines": {
+    "node": "^18.16.0"
   }
 }
