comment lint for now to test out test and build

--- a/.github/workflows/application-ci.yaml
+++ b/.github/workflows/application-ci.yaml
@@ -15,8 +15,8 @@ permissions:
   contents: read
 
 jobs:
-  lint:
-    uses: dvsa/.github/.github/workflows/nodejs-lint.yaml@v2.3
+  # lint:
+  #   uses: dvsa/.github/.github/workflows/nodejs-lint.yaml@v2.3
 
   test:
     uses: dvsa/.github/.github/workflows/nodejs-test.yaml@v3.0.0
