--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: CI for JWT Authorizor
+name: CI for HVT Nearest ATF
 
 on:
   push:
@@ -42,7 +42,7 @@ jobs:
     uses: dvsa/.github/.github/workflows/nodejs-build.yaml@v5.0.3
     needs: [ build-names ]
     with:
-      upload-artifact: true
+      upload-artifact: false
       build-folder: dist
       build-command: npm run build:prod
       node-version: '20.x'
