--- a/package.json
+++ b/package.json
@@ -45,13 +45,15 @@
     "@types/node": "^14.18.63",
     "@types/nunjucks": "^3.2.6",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
     "archiver": "^5.3.2",
     "aws-sam-webpack-plugin": "^0.15.0",
     "copy-webpack-plugin": "^13.0.0",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "current-git-branch": "^1.1.0",
-    "eslint": "^7.32.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint": "^8.57.1",
+    "eslint-import-resolver-typescript": "^3.5.4",
     "fs-extra": "^9.1.0",
     "jest": "^29.7.0",
     "sass": "^1.89.2",
@@ -67,6 +69,6 @@
     "webpack-merge": "^5.10.0"
   },
   "engines": {
-    "node": "^20.18.1"
+    "node": "^20.19.1"
   }
 }
