--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,12 @@
 name: CI for HVT Nearest ATF
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
-
+    branches:
+      - main
 jobs:
   lint:
     uses: dvsa/.github/.github/workflows/nodejs-lint.yaml@v5.0.3
@@ -42,8 +46,8 @@ jobs:
     uses: dvsa/.github/.github/workflows/nodejs-build.yaml@v5.0.3
     needs: [ build-names ]
     with:
-      upload-artifact: false
-      build-folder: dist
+      upload-artifact: true
+      build-folder: dist/artefact.zip
       build-command: npm run build:prod
       node-version: '20.x'
 
