--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,7 +47,8 @@ jobs:
     needs: [ build-names ]
     with:
       upload-artifact: true
-      build-folder: dist/artefact.zip
+      build-folder: build-artefact
+      build-folder-path: ./dist
       build-command: npm run build:prod
       node-version: '20.x'
 
